Align cards and list title; remove padding from inputs, to avoid change size

--- a/src/components/BoardHeader/BoardTitle.scss
+++ b/src/components/BoardHeader/BoardTitle.scss
@@ -28,7 +28,7 @@
 
 .board-title-input {
   flex: 1;
-  padding: 6px 10px 6px 10px;
+  padding: 6px 10px 6px 0px;
   border: 0;
   color: inherit;
   background: inherit;
